--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<!--[if IE 7]><link rel="stylesheet" type="text/css" href="styles/ie7.css" /><![endif]-->
 	<link rel="stylesheet" href="styles/print.css" type="text/css" media="print" />
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/dropbox.js/0.10.2/dropbox.min.js"></script>
+	<script type="text/javascript" src="parseSql/jquery-3.1.1.min.js"></script>
 
 	<script src="js/oz.js"></script>
 	<script src="js/config.js"></script>
@@ -181,7 +182,10 @@
 								<input type="button" id="dropboxlist" /><!-- may get hidden by dropBoxInit() -->
 							</div>
 							<hr/>
+							<div id="singlerow">
 							<input type="button" id="clientsql" />
+							<input type="button" id="clientxmlfromsql" />
+							</div>
 						</fieldset>
 					</td>
 					<td style="width:40%">
